nunaliit2-js/src/main/webapp/nunaliit2/css/basic/n2.widget.css
/*! n2.widget.css */

/* ==========================================================================
   - Theme styles for Nunaliit demo atlas (Fonts, colors, images, textures etc)
   ========================================================================== */



/* Desktop screens */

/* ============================== */
/* ! HEADER SECTION   */
/* ============================== */

/* Header Title */
.nunaliit_title {
	margin: 11.5px 20px;
	border: 0;
	padding: 0;
	z-index:10;	
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
}

/* Sub-Header Title */

.nunaliit_module_title {
	display: block;
	width: 100%;
	margin: 0;
	padding: 0;
	z-index: 10;
}
.nunaliit_title_link {
	padding:8px 20px;
	margin:0;
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
}

/* Header Menu */
.nunaliit_header-nav {
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
	margin: 0 0 0 25px;
	padding: 0;
	list-style:	none;
	line-height:1.0;
	height:100%;
	vertical-align: top;
}
.nunaliit_header-nav ul {
	position: absolute;
	top: 0;
	left:100%;
	margin: 0;
	padding: 0;
	display: none;
	width: 100%;
}
.nunaliit_header-nav li {
	float: left;
	position: relative;
	margin:0;
	padding:0;
}
.nunaliit_header-nav a {
	display: block;
	position: relative;
	padding:15px;
	padding-right: 25px;
}
.nunaliit_header-nav img {
	display:none;
}
.nunaliit_header-nav>ul {
	top: 0;
	left:auto;
	height: 100%;
	display:block;
	width: inherit;
}
.nunaliit_header-nav>ul>li>ul {
	left: -1px;
	width: 150%;
	top: 100%;
}
.nunaliit_header-nav ul li {
	width: 100%;
}
.nunaliit_header-nav>ul>li {
	width:auto;
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
	height:100%;
}
.nunaliit_header-nav li:hover {
	/*visibility: inherit;  fixes IE7 'sticky bug' */
	text-decoration:underline;
}
.nunaliit_header-nav li:hover>ul {
	display:block;
	z-index: 99;
}


/* ============================== */
/* ! CONTENT SECTION   */
/* ============================== */

/* Main Map */
.nunaliit_map {
	position: absolute;
	top: 0;
	left: 0;
	right: 450px;
	bottom: 0;
	border: 0;
	margin: 0;
	border: 0;
}

/* Search */
.nunaliit_searchInput {
	position: absolute;
	right: 0;
	top: 0;
	overflow: visible;
	z-index: 8;
}
.nunaliit_searchInput input {
	padding:2.5%;
	width:95%;
}

/* Side Bar */
.nunaliit_side {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	overflow: auto;
}

/* Map Interactions */
.map_interaction {
	position: absolute;
	top: 33px;
	right: 468px;
	text-align: right;
	padding: 0;
	margin: 0;
	border: 0;
	z-index:8;
}
.map_interaction input { 
	cursor: pointer;
}
.olControlEditingToolbar {
	position: absolute;
	right: 185px;
	top: 33px;
}

/* Table of Contents */
.nunaliit_table_of_contents {
	position: absolute;	
	top: 0;
	left: 0;
	right:451px;
	bottom:0;
	padding-top:34px;
	overflow:auto;
}
.nunaliit_table_of_contents ul {
	padding:0;
	margin:0;
}
.nunaliit_table_of_contents ul li {
	list-style:none;
	margin:0;
	padding:0;
}
.nunaliit_table_of_contents ul li a {
	padding-bottom:2.5%;
	display:block;
}
.nunaliit_table_of_contents ul img {
	width:100%;
	margin-bottom:10px;
}
.nunaliit_table_of_contents ul>li>ul>li {
	float:left;
	width:28%;
	padding:2.5%;
}
.nunaliit_table_of_contents ul>li>ul>li:last-child {
	margin-right:0;
}
.nunaliit_table_of_contents ul>li>ul>li>ul>li {
	float:left;
	width:100%;
	padding:2.5% 0;
}
.nunaliit_table_of_contents>ul>li>a {
	display:none;
}

/* Map Controls - Zoom - Layer Switch */
.olControlLayerSwitcher {
	left: 47px;
	top: 100px;
}
.olControlLayerSwitcher .maximizeDiv, .olControlLayerSwitcher .minimizeDiv {
	width: 28px;
	height: 28px;
	background-image: url('openlayers/settings_icon.png');
	opacity:0.7;
	top:5px;
	left:-29px;
}
.olControlLayerSwitcher .maximizeDiv:hover, .olControlLayerSwitcher .minimizeDiv:hover {
	opacity:1;
}
#OpenLayers_Control_MaximizeDiv img {
	display:none;
}
#OpenLayers_Control_MinimizeDiv_innerImage {
	display:none;
}
.olControlLayerSwitcher .layersDiv {
	background: url('openlayers/popup_bg.png') no-repeat top left;
	padding:11px 20px;
	margin: 6px 0 0 5px;
}
div.olControlZoom {
	top: 35px;
	left: 20px;
	position: absolute;
	background: none;
	border-radius: 0;
	padding: 0;
}
div.olControlZoom a { 
	background: #000;
	opacity:0.7;
	padding:3px;
	border-radius: 0;
	moz-border-radius:0;
}
div.olControlZoom a:hover { 
	background: #000;
	opacity:1;
}	
.olControlEditingToolbar div {
	float: left;
}
div.olControlMousePosition {
	right: 25px;
	background: rgba(255, 255, 255, 0.7);
}

/* ============================== */
/* ! FOOTER SECTION   */
/* ============================== */


.nunaliit_footer_nav {
	margin:2px 10px;
	list-style:none;
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
}
.nunaliit_footer_content {
	margin:2px 10px;
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
}
.nunaliit_footer_nav ul {
	margin:0;
	padding:0;
}

.nunaliit_footer_nav ul li {
	padding:0 10px;
	margin:0;
	display:-moz-inline-stack;
	display:inline-block;
	zoom:1;
	*display:inline;
}
.nunaliit_footer_nav ul li:first-child {
	margin-right:19px;
}
.nunaliit_footer_nav ul li:last-child {
	margin-left:0;
	padding-left:0;
	border-left:0;	
}


/* Smaller screens */

@media only screen and (max-width: 1023px) {
}


/* Mobile */

@media handheld, only screen and (max-width: 767px) {
}

/* 
==============================
LAYER DIALOG SECTION 
==============================
*/

.editorSelectLayerContent {
	overflow: auto;
	position:  absolute;
	top: 0;
	bottom: 50px;
	left: 0;
	right: 0;
}
.editorSelectLayerContent div {
	padding: 3px 5px;
}
.editorSelectLayerContent label {
	padding: 0 5px;
}
.editorSelectLayerButtons {
	position: absolute;
	bottom: 0;
	padding: 10px 0;
}

/* 
==============================
ROLE LIST 
==============================
*/
.n2_roles_list {
	max-height: 400px;
	overflow: auto;
	margin-bottom: 5px;
}


/* 
==============================
Layer Switcher 
==============================
*/
.olControlLayerSwitcher {
	width: 215px;
}
.n2layerSwitcher_input_container
,.n2layerSwitcher_label_container
,.n2layerSwitcher_preview_container {
	display: inline-block;
	vertical-align: top;
}
.n2layerSwitcher_label_container {
	padding-left: 3px;
	width: 125px;
}
.n2layerSwitcher_preview_container {
	padding-left: 3px;
}

/*
==============================
Max Height Widget
==============================
*/
.n2show_maxHeight_truncated {
	-webkit-mask-image: -webkit-gradient(linear, left 85%, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
}

/* 
==============================
Help Dialog 
==============================
*/
.n2module_help_dialog .ui-dialog-titlebar {
	background: #3a3a3a;
	color: #ffffff;
	font-family: helvetica, sans-serif;
	font-weight: 500;
}

